# mcp-benchmark

./: .gitignore  Cargo.toml  benchmark.py  go.mod  main.go  pyproject.toml  test-with-curl.sh  test-with-go.go  test-with-rust.rs
src/: main.rs
